# eth_teleop

./: .gitignore  README.md  a_vic-data_P.csv  a_vic.bag  algorithmic_K-data_P.csv  algorithmic_K-data_for_recording.csv  algorithmic_K.bag  define_Ks.zsh  h_vic-data_P.csv  h_vic.bag  h_vic.zsh  heuristic_K-data_P.csv  heuristic_K-data_for_recording.csv  heuristic_K.bag  heuristic_K_4-data_P.csv  high_static-data_P.csv  high_static.bag  high_static_K-data_P.csv  high_static_K-data_for_recording.csv  high_static_K.bag  low_static-data_P.csv  low_static.bag  low_static_K-data_P.csv  low_static_K-data_for_recording.csv  low_static_K.bag  recording.csv  run.zsh  start_server.zsh  test.zsh  test_forces.zsh  user_study.zsh
bag/: heuristic_K.bag  heuristic_K_5.bag  high_static_K.bag
csv/: algorithmic_K-data_P.csv  heuristic_K-data_P.csv  heuristic_K_4-data_P.csv  heuristic_K_5-data_P.csv  high_static_K-data_P.csv  low_static_K-data_P.csv
data/: heuristic_K_4.bag
doc/: changelog.md  data_recording.md  issue.md  ongoing.md
eth/: CMakeLists.txt  README.md  package.xml
eth/launch/: eth_robot.launch  man_robot.launch  panda_control.launch  panda_gazebo.launch  simulation.launch  tele_robot.launch  tele_sim.launch
eth/script/: Kd_eth.py  Ks_eth.py  haptic.py  haptic_handle.py  haptic_plain.py  haptic_texture.py  manipulation.py  telemanipulation.py  test_publisher.py
eth/src/: error_recovery_node.cpp  haptic.cpp  home.cpp
franka_example_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml
franka_example_controllers/cfg/: compliance_param.cfg
franka_example_controllers/config/: franka_example_controllers.yaml
franka_example_controllers/include/franka_example_controllers/: CIMP_eth_controller.h  CIMP_teleman_controller.h
franka_example_controllers/launch/: CIMP_eth_controller.launch  CIMP_teleman_controller.launch  cartesian_impedance_example_controller.launch  move_to_start.launch
franka_example_controllers/launch/rviz/: franka_description_with_marker.rviz  teleman_franka_description_with_marker.rviz
franka_example_controllers/scripts/: interactive_marker.py
franka_example_controllers/src/: CIMP_eth_controller.cpp  CIMP_teleman_controller.cpp  cartesian_impedance_example_controller.cpp  cartesian_velocity_example_controller.cpp
teleman/: CMakeLists.txt  README.md  package.xml
teleman/launch/: panda_gazebo.launch  tele_sim.launch  teleman_control.launch  teleman_robot.launch
teleman/msg/: EthStamped.msg
teleman/script/: Kd_teleop.py  Ks_teleop.py  telemanipulation.py  teleop2.py  test_publisher.py  testpub
teleman/src/: home.cpp  telemanipulation.cpp  tutorial.cpp
